libs/@local/hashql/ast/tests/ui/lower/special-form-expander/type-collect-all-errors.jsonc
//@ run: fail
//@ description: We should collect all errors when lowering type/3, and not only report the first one.
["::kernel::special_form::type", "::x", { "#literal": 1 }, "x"]
//~^ ERROR Replace this qualified path with a simple identifier
//~| ERROR Replace this literal with a type name
